--- a/m/elig-questions-form.html
+++ b/m/elig-questions-form.html
@@ -11,12 +11,12 @@
 						    <p>1. 60 years or over<br>
 						       2. Have insomnia symptoms or meet criteria for a poor sleeper</p>
 						    <p>All answers are anonymous and absolutely no identifiable data will be collected. To establish whether you are eligible to complete the survey, please complete the screening questionnaires (5 minutes).</p>
-						    <small>The ethical aspects of this research project have been approved by the Sydney Local Health District (SLHD) Health Research Ethics Committee (HREC) - Reference X21-0265</small><br><br>
-                            <p><i>Read the <u><a style='color:white' href="m/Online Survey PISCF.pdf" target="_blank">Participant information Statement Here</a></u> to learn more about the research study or contact the research team at sleepfix@woolcock.org.au</i></p>
-						    
+						    <small>The ethical aspects of this research project have been approved by the Sydney Local Health District (SLHD) Health Research Ethics Committee (HREC) - Reference X21-0265.
+                                <i>Read the <u><a style='color:white' href="m/Online Survey PISCF.pdf" target="_blank">Participant information Statement Here</a></u> to learn more about the research study or contact the research team at sleepfix@woolcock.org.au</i>
+                            </small>						    
 						<!--<a href="#start" class="btn_1 rounded mobile_btn">Start Now!</a>-->
 					</div>
-					<div class="copy"><img src="img/footer_logos.png" Width="65%" Height="65%">
+					<div class="copy"><a href="https://woolcock.org.au" target=_blank><img src="img/footer_woolcock_logo.png"  width="45%" Height="65%"></a><a href="https://sydney.edu.au" target=_blank><img src="img/footer_sydney_uni_logo.png"  width="20%"Height="65%"></a>
 					</div>
 				</div>
 
