--- a/0/header.html
+++ b/0/header.html
@@ -23,7 +23,7 @@
         .vm-desk-logo{float:left;padding:0;cursor:pointer;}
         #vm-menu{ float:left;padding:50px 30px 0 30px;}
         @media screen and (max-width: 1200px){
-            #header{height:100px;}
+            #header{height:0;}
             .vm-desk-logo{display:none;}
             #vm-menu{padding:0;}
         }
