--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
     <head>
         <!-- The title and meta data are changed by the active module-->
         <title></title>
-        <meta name="description" content="">
+        <meta name="description" content="Tell us about your experience with digital sleep health apps">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <meta property="og:title" content="Digital Sleep Health Survey for Adults with Poor Sleep" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.sleepsurvey.com.au" />
+        <meta property="og:image" content="https://www.sleepsurvey.com.au/images/Sleepfix Facebook artboard.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />        
         <link rel="icon" href="data:,">
         <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
@@ -75,7 +82,7 @@
     </body>
     <script boot-up>
         //------------------------------------
-        $vm={};$vm.ver=[0.15,0.15]; //increase ver[0] if any module changed, increase ver[1] if vm.js changed
+        $vm={};$vm.ver=[0.16,0.16]; //increase ver[0] if any module changed, increase ver[1] if vm.js changed
         $vm.debug=1;
         //------------------------------------
         //setup modules location
