--- a/m/elig-questions-form.html
+++ b/m/elig-questions-form.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid full-height">
 		<div class="row row-height">
 			<div class="col-lg-6 content-left">
-				<div class="content-left-wrapper">
+				<div id=top_part__ID class="content-left-wrapper">
 					<a href="index.html" id="logo"><img src="img/logo_sf_white.png" height="35px" alt=""></a>
 					<div>
 						<h2>Welcome to the digital health survey to explore digital health preferences and needs for older adults with poor sleep.</h2>
@@ -16,7 +16,7 @@
                             </small>						    
 						<!--<a href="#start" class="btn_1 rounded mobile_btn">Start Now!</a>-->
 					</div>
-					<div class="copy"><a href="https://woolcock.org.au" target=_blank><img src="img/footer_woolcock_logo.png"  width="45%" Height="65%"></a><a href="https://sydney.edu.au" target=_blank><img src="img/footer_sydney_uni_logo.png"  width="20%"Height="65%"></a>
+					<div class="copy"><a style='padding-right:20px' href="https://woolcock.org.au" target=_blank><img style='margin-bottom:14px' src="img/New Woolcock Logo.png"  width="30%" ></a><a href="https://sydney.edu.au" target=_blank><img src="img/footer_sydney_uni_logo.png"  width="20%"Height="65%"></a>
 					</div>
 				</div>
 
@@ -1055,7 +1055,14 @@
                 if(current_I==1) $('#previous__ID').hide();
                 else  $('#previous__ID').show();
                 console.log("show: "+I)
-                $(window).scrollTop(0);
+                //$(window).scrollTop(0);
+                if ($(window).width() < 960 && I>1) {
+                    $('#top_part__ID').hide()
+
+                }
+                else {
+                    $('#top_part__ID').show()
+                }
             }
             //-------------------------------------
             $('#mobileNumber__ID').on('change', function () {
