--- a/m/dsa-form.html
+++ b/m/dsa-form.html
@@ -8,7 +8,7 @@
 						<h2>We need your help!</h2><br>
 						<h3>Fill out the following survey and share your thoughts to help us understand more about what would be relevant and helpful when using a sleep health mobile application.</h3><br>
 						<h3>Once you have completed it, you may be in the running to win one of three $200 eGift Vouchers!</h3>
-						<a href="#start" class="btn_1 rounded mobile_btn">Start Now!</a>
+						<!--<a href="#start" class="btn_1 rounded mobile_btn">Start Now!</a>-->
 					</div>
 					<div class="copy"><a style='padding-right:20px' href="https://woolcock.org.au" target=_blank><img style='margin-bottom:14px' src="img/New Woolcock Logo.png"  width="30%" ></a><a href="https://sydney.edu.au" target=_blank><img src="img/footer_sydney_uni_logo.png"  width="20%"Height="65%"></a>
 					</div>
@@ -724,12 +724,10 @@
                 //$(window).scrollTop(0);
                 if ($(window).width() < 960 && I>1) {
                     $('#top_part__ID').hide()
-
                 }
                 else {
                     $('#top_part__ID').show()
                 }
-
             }
             //-------------------------------------
             $("input[name='sex']").on('change', function () {
