--- a/m/elig-questions-form.html
+++ b/m/elig-questions-form.html
@@ -36,7 +36,7 @@
                                 <h3 class="main_question"><strong>1/16</strong>Determine your eligiblity here</h3>
                                 <div class="form-group">
                                 <p>What is your age?</p>
-                                    <input type="number" name="age" class="form-control" placeholder="Age" required>
+                                    <input type="number" name="age" min=0 max=110 class="form-control" placeholder="Age" required>
                                 </div>
                                 <div class="form-group">
                                 <p>Are you fluent in English?</p>
