--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <script src="js/modernizr.js"></script>   
         
         <!-- Facebook Pixel Code -->
-
+        <meta name="facebook-domain-verification" content="uukrj2mzmzbn0bpsjo2d8mc6cnrxl8" />
         <script>
 
             !function(f,b,e,v,n,t,s)
@@ -82,7 +82,7 @@
     </body>
     <script boot-up>
         //------------------------------------
-        $vm={};$vm.ver=[0.19,0.19]; //increase ver[0] if any module changed, increase ver[1] if vm.js changed
+        $vm={};$vm.ver=[0.20,0.20]; //increase ver[0] if any module changed, increase ver[1] if vm.js changed
         $vm.debug=1;
         //------------------------------------
         //setup modules location
