--- a/m/elig-questions-form.html
+++ b/m/elig-questions-form.html
@@ -867,7 +867,7 @@
                                 <div style='padding-left:30px'>
                                     <img id="captcha_img__ID" />
                                 </div>
-                                <p>Please type in the number and letters in the image in the box below.</p>
+                                <p>Please type in the number and letters (lower case) in the image in the box below.</p>
                                 <input type=text class="form-control" name=_captcha_code />
                                 <div style="display:none">
                                     <input type=text name=_captcha_hash />
