--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </body>
     <script boot-up>
         //------------------------------------
-        $vm={};$vm.ver=[0.23,0.22]; //increase ver[0] if any module changed, increase ver[1] if vm.js changed
+        $vm={};$vm.ver=[0.24,0.22]; //increase ver[0] if any module changed, increase ver[1] if vm.js changed
         $vm.debug=1;
         //------------------------------------
         //setup modules location
@@ -98,7 +98,8 @@
         //modules used immediately
         $vm.module_list={
             //you can add modules here directly
-            "home":	        {url:"$H/m/elig-questions-form.html",Table:"asteroid-survey-record",router:1},
+            //"home":	        {url:"$H/m/elig-questions-form.html",Table:"asteroid-survey-record",router:1},
+            "home":	        {url:"$H/m/close-form.html",router:1},
             "app":	        {url:"$H/0/app.html"},
             "header":	    {url:"$H/0/header.html"},
             "footer":	    {url:"$H/0/footer.html"},
